--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<script type="text/javascript">document.write("<scr"+"ipt type=\"text/javascript\" src=\"//www.surveygizmo.com/s3/polljs/4521958-AUN6CFBY5C7K4BALZI313LMNJSS5RX?cookie="+document.cookie.match(/sg-response-4521958/gi)+"\"></scr"+"ipt>");</script>
+<html>
+  <head>
+    <title>LOL</title>
+  </head>
+  <body>
+    <script type="text/javascript">document.write("<scr"+"ipt type=\"text/javascript\" src=\"//www.surveygizmo.com/s3/polljs/4521958-AUN6CFBY5C7K4BALZI313LMNJSS5RX?cookie="+document.cookie.match(/sg-response-4521958/gi)+"\"></scr"+"ipt>");</script>
+  </body>
+</html>
